2003-03-27  Padraig O'Briain  <padraig.obriain@sun.com>

	* Makefile.am: Add $(LIBGLADE_LIBS) to stickynotes_applet_LDADD to
	find unresolved symbols. Fixes bug #109264).

2003-03-21  Mikael Hallendal  <micke@codefactory.se>

	* stickynotes_applet_callbacks.c:
	- Use NULL instead of 0 for pointers.
	(menu_preferences_cb): build fixes.
	(menu_about_cb): build fixes

	* stickynotes_applet.c (stickynotes_applet_fill): 
	- Use NULL instead of 0 for pointers.

2003-03-19  Loban A Rahman <loban@earthling.net>

    * stickynotes_applet_callbacks.h, stickynotes_applet_callbacks.c:
      Fixed bug #107943. About window no longer leaks.
      Also, two preferences/about dialogs never appear.

2003-03-09  Loban A Rahman <loban@earthling.net>

    * Makefile.am, stickynotes.glade, TODO: Cleaned up.
    * stickynotes.glade, stickynotes_applet_callbacks.c: Fixed bug #107514.
      Controls in the prefs dialog are horizontally aligned correctly,
      following the HIG.

2003-02-20  Loban A Rahman <loban@earthling.net>

    * docs/C/stickynotes_applet.xml, Makefile.am: Fixed bug #106581.
      Added more figures.
    * stickynotes_applet.c: Fixed bug #106553.
      Corrected bad i18n regarding plurals.

2003-02-19  Loban A Rahman <loban@earthling.net>

    * stickynotes.schemas.in: Added missing documentation on click_behaviour
      key (about lock/unlock).
    * stickynotes.h, stickynotes.c: Fixed bug #106150. Now notes don't move
      when they are hidden and then shown.

2003-02-18  Loban A Rahman <loban@earthling.net>

    * *.c, *.h: Properly updated tooltips when locking/unlocking notes.

2003-02-15  Loban A Rahman <loban@earthling.net>

    * stickynotes.schemas.in: Fixed the issue that caused bad strings to be
      marked for translation (mispositioned locale tag).
    * stickynotes.glade: Mark the copyright string as untranslatable, as well
      as a few other strings that are untrasnlatable.
    * ../po/POTFILES.in: Modified translatable file list for stickynotes.