@@ -1,6 +1,8 @@
 
 *** Sticky Notes for the Gnome Desktop Environment. ***
 
+* Use enums
+
 * GnomeAboutDialog hacks needed when using libglade.
 	- Setting "name"
 	- Setting "version"
