@@ -1,3 +1,9 @@
+2003-03-28  Loban A Rahman <loban@earthling.net>
+
+	* GNOME_StickyNotesApplet.xml.in, Makefile.am:
+	  Removed redundant GNOME_StickyNotesApplet.xml.in file and added
+	  GNOME_StickyNotesApplet.xml file. Modified Makefile.am to reflect.
+
 2003-03-27  Padraig O'Briain  <padraig.obriain@sun.com>
 
 	* Makefile.am: Add $(LIBGLADE_LIBS) to stickynotes_applet_LDADD to
